tests/more_generics/more_generics.exp
Error: poly.js:3
  3: function foo2<T,S>(x:T):S { return x; }
                                        ^ T. This type is incompatible with the expected return type of
  3: function foo2<T,S>(x:T):S { return x; }
                             ^ some incompatible instantiation of `S`

Error: poly.js:10
 10: function foo5<T>():Array<T> { return x; }
                                          ^ empty array literal. This type is incompatible with the expected return type of
 10: function foo5<T>():Array<T> { return x; }
                        ^^^^^^^^ array type
  Type argument `T` is incompatible:
     10: function foo5<T>():Array<T> { return x; }
                                  ^ some incompatible instantiation of `T`. This type is incompatible with
     10: function foo5<T>():Array<T> { return x; }
                                  ^ T

Error: poly.js:20
 20: function foo7<R>(x:R):R { return foo5(); }
                                      ^^^^^^ array type. This type is incompatible with the expected return type of
 20: function foo7<R>(x:R):R { return foo5(); }
                           ^ some incompatible instantiation of `R`

Error: poly.js:24
 24:   y();
       ^^^ call of `y`. Function cannot be called on
 24:   y();
       ^ U


Found 4 errors
